Remove aspect ratio align bug in listings

--- a/_sass/_components/_post-listing.scss
+++ b/_sass/_components/_post-listing.scss
@@ -31,8 +31,7 @@
 }
 
 .post-listing__image {
-  aspect-ratio: 5 / 2;
-  min-height: 12rem;
+  padding-top: 40%;
   background-size: cover;
   background-position: center;
 }
